--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/usr/local/bin/android-studio/sdk
+#sdk.dir=/usr/local/bin/android-sdk-linux
