--- a/NewIntentFilter/src/main/AndroidManifest.xml
+++ b/NewIntentFilter/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,9 +19,11 @@
             android:name="com.mvp.and.v2.intents.builder.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="http"/>
             </intent-filter>
         </activity>
     </application>
